--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "react-spinners": "^0.17.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
