--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.508.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
   },
